# baseapp-backend

./: .coverage  .coveragerc  .env  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  CODEOWNERS  Dockerfile  MANIFEST.in  PLUGIN_ARCHITECTURE.md  PLUGIN_ARCHITECTURE_BACKWARDS_COMPATIBILITY.md  README.md  REFACTOR_PLUGIN_ARCHITECTURE_BY_APP.md  docker-compose.yml  manage.py  migrate-packages.sh  pyproject.toml  pytest.ini  setup.cfg  sgconfig.yml  sonar-project.properties
baseapp/: .coveragerc  MANIFEST.in  README.md  __init__.py  setup.cfg  setup.py
baseapp-auth/: MANIFEST.in  README.md  db.sqlite3  setup.cfg  setup.py
baseapp-auth/baseapp_auth/: __init__.py  admin.py  apps.py  decorators.py  emails.py  forms.py  managers.py  middleware.py  models.py  password_validators.py  pipeline.py  querysets.py  tasks.py  tokens.py
baseapp-auth/baseapp_devices/: admin.py  apps.py  middleware.py  models.py  utils.py
baseapp-auth/testproject/: baseapp_referrals  graphql.py  manage.py  requirements.txt  settings.py  settings_referrals.py  setup.cfg  setup.py  urls.py
baseapp-blocks/: README.md  setup.cfg  setup.py
baseapp-blocks/baseapp_blocks/: admin.py  apps.py  base.py  models.py  permissions.py
baseapp-blocks/testproject/: graphql.py  requirements.txt  settings.py
baseapp-chats/: README.md  setup.cfg  setup.py
baseapp-chats/baseapp_chats/: admin.py  apps.py  base.py  models.py  permissions.py  triggers.py  utils.py
baseapp-chats/testproject/: graphql.py  requirements.txt  settings.py
baseapp-cloudflare-stream-field/: MANIFEST.in  README.md  setup.cfg  setup.py
baseapp-cloudflare-stream-field/baseapp_cloudflare_stream_field/: __init__.py  field.py  forms.py  stream.py  tasks.py  urls.py  views.py  widgets.py
baseapp-cloudflare-stream-field/testproject/: requirements.txt  settings.py
baseapp-comments/: README.md  setup.cfg
baseapp-comments/baseapp_comments/: admin.py  apps.py  managers.py  models.py  notifications.py  permissions.py  signals.py  status.py  validators.py
baseapp-comments/testproject/: graphql.py  requirements.txt  settings.py
baseapp-content-feed/: README.md  setup.cfg
baseapp-content-feed/baseapp_content_feed/: admin.py  apps.py  models.py
baseapp-content-feed/testproject/: graphql.py  requirements.txt  settings.py
baseapp-core/: MANIFEST.in  README.md  __init__.py  pyproject.toml  setup.cfg  setup.py
baseapp-core/baseapp_core/: asgi.py  channels.py  logging.py  middleware.py  models.py  sentry.py  tokens.py  utils.py
baseapp-core/testproject/: requirements.txt  settings.py
baseapp-drf-view-action-permissions/: LICENSE  MANIFEST.in  README.md  setup.cfg  setup.py
baseapp-drf-view-action-permissions/baseapp_drf_view_action_permissions/: action.py  admin.py  apps.py  middleware.py  mixin.py  models.py  settings.py  utils.py
baseapp-drf-view-action-permissions/testproject/: requirements.txt  settings.py
baseapp-e2e/: README.md  setup.cfg  setup.py
baseapp-e2e/baseapp_e2e/: conf.py  utils.py
baseapp-e2e/testproject/: factories.py  requirements.txt  settings.py  urls.py
baseapp-follows/: README.md  setup.cfg  setup.py
baseapp-follows/baseapp_follows/: admin.py  apps.py  models.py  permissions.py
baseapp-follows/testproject/: graphql.py  requirements.txt  settings.py
baseapp-message-templates/: README.md  setup.cfg  setup.py
baseapp-message-templates/baseapp_message_templates/: admin.py  custom_templates.py  email_utils.py  models.py  sendgrid.py  utils.py
baseapp-message-templates/testproject/: requirements.txt  settings.py
baseapp-notifications/: MANIFEST.in  README.md  setup.cfg  setup.py
baseapp-notifications/baseapp_notifications/: admin.py  apps.py  base.py  models.py  tasks.py  utils.py
baseapp-notifications/testproject/: graphql.py  requirements.txt  settings.py  urls.py
baseapp-organizations/: README.md  setup.cfg
baseapp-organizations/baseapp_organizations/: admin.py  models.py  permissions.py
baseapp-organizations/testproject/: graphql.py  requirements.txt  settings.py
baseapp-pages/: README.md  pyproject.toml  setup.cfg
baseapp-pages/baseapp_pages/: admin.py  apps.py  models.py  permissions.py
baseapp-pages/testproject/: graphql.py  requirements.txt  settings.py  urls.py
baseapp-payments/: MANIFEST.in  README.md  setup.cfg  setup.py
baseapp-payments/baseapp_payments/: admin.py  apps.py  emails.py  models.py  router.py  serializers.py  utils.py  views.py  webhook.py
baseapp-payments/testproject/: requirements.txt  settings.py  urls.py
baseapp-payments/tests/: settings.py  urls.py
baseapp-profiles/: MIGRATION.md  README.md  setup.cfg
baseapp-profiles/baseapp_profiles/: admin.py  apps.py  managers.py  middleware.py  models.py  notifications.py  permissions.py  signals.py
baseapp-profiles/testproject/: graphql.py  requirements.txt  settings.py
baseapp-reactions/: README.md  setup.cfg  setup.py
baseapp-reactions/baseapp_reactions/: admin.py  apps.py  models.py  permissions.py
baseapp-reactions/testproject/: graphql.py  requirements.txt  settings.py
baseapp-referrals/: README.md  setup.cfg  setup.py
baseapp-referrals/baseapp_referrals/: admin.py  emails.py  models.py  pipeline.py  utils.py
baseapp-reports/: README.md  setup.cfg  setup.py
baseapp-reports/baseapp_reports/: admin.py  models.py  permissions.py
baseapp-reports/testproject/: graphql.py  requirements.txt  settings.py  urls.py
baseapp-social-auth/: MANIFEST.in  README.md  manage.py  setup.cfg  setup.py
baseapp-social-auth/testproject/: settings.py  (+2 more)
baseapp-url-shortening/: README.md  setup.cfg  setup.py
baseapp-wagtail/: MANIFEST.in  README.md  setup.cfg  setup.py  setup_test_migrations.sh
baseapp_core/: README.md  admin.py  admin_helpers.py  app_config.py  apps.py  authentication.py  backfill.py  channels.py  constants.py  db_utils.py  debug_toolbar.py  deep_links.py  logging.py  middleware.py  models.py  pghelpers.py  sentry.py  setup.cfg  signals.py  swappable.py  swapper.py  tokens.py  utils.py  wsgi.py
testproject/: graphql.py  pyproject.toml  requirements.txt  settings.py  urls.py
(+2343 files in other folders)
