[build-system]
requires = ['setuptools>=64', 'wheel', 'setuptools_scm[toml]>=8']
build-backend = 'setuptools.build_meta'

[tool.setuptools_scm]
tag_regex = "^baseapp@v(?P<version>[vV]?\\d+(?:\\.\\d+){0,2}[^\\+]*)(?:\\+.*)?$"

[tool.black]
line-length = 100
target_version = ['py38']

[tool.isort]
profile = "black"
