[metadata]
name = baseapp_backend
description = BaseApp
long_description = file: README.md
url = https://github.com/silverlogic/baseapp-backend
author = The SilverLogic
author_email = dev@tsl.io
license = BSD-3-Clause  # Example license

[options]
include_package_data = true
packages = find:
python_requires = >=3.11
setup_requires =
	setuptools_scm
install_requires =
    Django >= 4.2.15
    daphne >= 4.0
    channels >= 4.0
    django-filter >= 23.3
    celery >= 5.2
    django-pgtrigger == 4.17.0
    swapper >= 1.3
    django-model-utils >= 4.3
    djangorestframework >= 3.14, < 3.17
    drf-nested-routers >= 0.93.5
    djangorestframework-expander >= 0.2
    drf-extra-fields >= 3.5
    psycopg2-binary >= 2.9
    django-phonenumber-field >= 7.0
    phonenumbers >= 8.13
    easy_thumbnails >= 2.8
    djmail >= 2.0
    django-constance >= 4.3.2
    django_jinja >= 2.11
    django-pghistory == 3.9.1
    django-ipware >= 7.0.1
    python-ipware >= 3.0.0
    requests >= 2.32.3
    pathlib >= 1.0.1

[options.extras_require]
auth =
    baseapp-django-trench >= 0.4.4
    djangorestframework-simplejwt[crypto] >= 5.2, < 5.6
referrals =
    hashids == 1.3.1
graphql =
    graphene >= 3.2
    graphene-django >= 3.2.0
    graphene_django_optimizer >= 0.10
    django-graphql-geojson >= 0.1.4
    graphene-django-query-optimizer >= 0.10.15
    graphene-file-upload == 1.3.0
    baseapp-django-channels-graphql-ws == 1.0.0rc9
pages =
    django-quill-editor >= 0.1
    django-translated-fields >= 0.13
payments = 
    stripe >= 11.5.0
notifications =
    django-notifications-hq >= 1.8
    firebase-admin >= 6.5.0
    django-push-notifications[WP,apns-async,FCM] >= 3.2
urlshortening =
    short_url >= 1.2.2
messagetemplates =
    sendgrid >= 6.9
    django-sendgrid-v5 >= 1.2
    beautifulsoup4 >= 4.6
    django-nested-admin >= 3.3
    lxml >= 4.9
    nh3 >= 0.2
    django-prose-editor[sanitize] >= 0.24.0
wagtail =
    wagtail >= 7.0
    wagtail-headless-preview == 0.8
socialauth =
    hashids == 1.3.1
    rest-social-auth >= 8.1.0
    social-auth-core == 4.5.4
    social-auth-app-django == 5.4.3
pdf =
    pypdf >= 6, < 7

[options.package_data]
baseapp =
    *.j2
    *.html
    *.png
baseapp_core =
    *.j2
    *.html
    *.png
baseapp_reactions =
    *.j2
    *.html
    *.png
baseapp_reports =
    *.j2
    *.html
    *.png
baseapp_ratings =
    *.j2
    *.html
    *.png
baseapp_follows =
    *.j2
    *.html
    *.png
baseapp_blocks =
    *.j2
    *.html
    *.png
baseapp_pages =
    *.j2
    *.html
    *.png
baseapp_payments =
    *.j2
    *.html
    *.png
baseapp_notifications =
    *.j2
    *.html
    *.png
baseapp_comments =
    *.j2
    *.html
    *.png
baseapp_cloudflare_stream_field =
    *.html
    *.js
    *.map
baseapp_url_shortening =
    *.html
    *.js
    *.map
baseapp_organizations =
    *.j2
    *.html
    *.png
baseapp_message_templates =
    *.j2
    *.html
    *.png
baseapp_chats =
    *.j2
    *.html
    *.png
baseapp_e2e =
    *.j2
    *.html
    *.png
baseapp_drf_view_action_permissions =
    *.j2
    *.html
    *.png
baseapp_social_auth =
    *.j2
    *.html
    *.png
baseapp_wagtail =
    *.j2
    *.html
    *.png
baseapp_profiles =
    *.j2
    *.html
    *.png
    *.jpg
baseapp_auth =
    *.j2
    *.html
    *.png
baseapp_referrals =
    *.j2
    *.html
    *.png
baseapp_pdf =
    *.j2
    *.html
baseapp_api_key =
    *.j2
    *.html
