[metadata]
name = baseapp_auth
version = 0.1.0
description = BaseApp Auth

url = https://github.com/silverlogic/baseapp-backend
author = The SilverLogic
author_email = dev@tsl.io
license = BSD-3-Clause  # Example license

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django >= 3.2
    celery >= 5.2
    daphne == 4.0.0
    django-avatar >= 7.1.1
    django-constance[database] >= 2.9.1
    django-jinja >= 2.10.0
    django-model-utils >= 4.3.1
    django-trench @ https://github.com/silverlogic/django-trench/archive/refs/tags/v0.3.3.zip
    djangorestframework >= 3.14.0
    djangorestframework-simplejwt[crypto] >= 5.2.2
    requests >= 2.31.0
    swapper == 1.3.0


    # TODO: add a require for baseapp_core after it's published

[options.package_data]
baseapp_core =
    *.j2
    *.html
    *.png

[tool:pytest]
DJANGO_SETTINGS_MODULE = testproject.settings
python_files = tests.py test_*.py **_test.py
