[metadata]
name = baseapp_chats
version = 0.0.1
description = BaseApp Chats
long_description = file: README.md
url = https://github.com/silverlogic/baseapp-backend
author = The SilverLogic
author_email = dev@tsl.io
license = BSD-3-Clause  # Example license

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    baseapp-core >= 0.3.7
    baseapp-profiles >= 0.2.4

[options.package_data]
baseapp_chats =
    *.j2
    *.html
    *.png
