[metadata]
name = django-cloudflare-stream
version = 0.2
description = A CloudFlare Stream Field for Django with admin integration.
long_description = file: README.md
url = https://github.com/silverlogic/django-cloudflare-stream
author = The SilverLogic
author_email = dev@tsl.io
license = BSD-3-Clause  # Example license
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = True
packages = find:
python_requires = >=3.6
install_requires =
    Django >= 3.2
    requests >= 2.28
    celery >= 5.2.7

[options.package_data]
cloudflare_stream_field =
    *.html
    *.js
    *.map