[metadata]
name = baseapp_comments
version = 0.1.4
description = BaseApp Comments
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/silverlogic/baseapp-backend
author = The SilverLogic
author_email = dev@tsl.io
license = BSD-3-Clause  # Example license

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
install_requires =
    baseapp-core[graphql] >= 0.2.9
    baseapp-auth >= 0.2
    baseapp-notifications >= 0.1
    baseapp-reactions >= 0.1.8
    baseapp-reports >= 0.0.1

[options.package_data]
baseapp_comments =
    *.j2
    *.html
    *.png
