[metadata]
name = baseapp_content_feed
version = 0.3.0
description = BaseApp Content Feed
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/silverlogic/baseapp-backend
author = The SilverLogic
author_email = dev@tsl.io
license = BSD-3-Clause  # Example license

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
install_requires =
    baseapp-core[graphql] >= 0.3.7
    baseapp-auth >= 0.2

[options.package_data]
baseapp_content_feed =
    *.j2
    *.html
    *.png
