[build-system]
requires = ['setuptools>=64', 'wheel', 'setuptools_scm[toml]>=8']

build-backend = 'setuptools.build_meta'

[tool.setuptools_scm]
tag_regex = "^baseapp-\\w+@v(?P<version>[vV]?\\d+(?:\\.\\d+){0,2}[^\\+]*)(?:\\+.*)?$"
root = "../"

[tool.black]
line-length = 100
target_version = ['py38']

[tool.isort]
profile = "black"