[metadata]
name = baseapp-core
version = 0.2.0
description = BaseApp Core
long_description = file: README.md
url = https://github.com/silverlogic/baseapp-backend
author = The SilverLogic
author_email = dev@tsl.io
license = BSD-3-Clause  # Example license

[options]
include_package_data = true
packages = find:
python_requires = >=3.11
install_requires =
    Django >= 4.2
    daphne >= 4.0
    channels >= 4.0
    django-filter >= 23.3
    celery >= 5.2
    django-pgtrigger >= 4.7
    swapper >= 1.3
    django-model-utils >= 4.3
    djangorestframework >= 3.14
    djangorestframework-expander >= 0.2
    drf-extra-fields >= 3.5
    graphene >= 3.2
    graphene-django >= 3.1
    psycopg2-binary >= 2.9
    django-phonenumber-field >= 7.0
    phonenumbers >= 8.13
    easy_thumbnails >= 2.8
    djmail >= 2.0

[options.package_data]
baseapp_core =
    *.j2
    *.html
    *.png
