[metadata]
name = baseapp_e2e
version = 0.2
description = BaseApp End-To-End Tests
long_description = file: README.md
url = https://github.com/silverlogic/baseapp-backend
author = The SilverLogic
author_email = dev@tsl.io
license = BSD-3-Clause  # Example license

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    baseapp-core

[options.package_data]
baseapp_e2e =
    *.j2
    *.html
    *.png
