[metadata]
name = baseapp_follows
version = 0.0.6
description = BaseApp Follows
long_description = file: README.md
url = https://github.com/silverlogic/baseapp-backend
author = The SilverLogic
author_email = dev@tsl.io
license = BSD-3-Clause  # Example license

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    baseapp-core >= 0.3.3
    baseapp-profiles >= 0.2.1

[options.package_data]
baseapp_follows =
    *.j2
    *.html
    *.png
