[metadata]
name = baseapp_message_templates
version = 1.6
description = A BaseApp app that allows the use of customizable e-mail and sms templates.
long_description = file: README.md
url = https://github.com/silverlogic/baseapp-backend
author = The SilverLogic
author_email = dev@tsl.io
license = BSD-3-Clause
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.2
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = True
packages = find:
python_requires = >=3.8
install_requires =
    Django >= 3.2
    djangorestframework >= 3.14
    djangorestframework-expander >= 0.2
    django-model-utils >= 4.3
    django-ckeditor >= 6.5
    sendgrid >= 6.9
    django-sendgrid-v5 >= 1.2
    beautifulsoup4 >= 4.6
    django-nested-admin >= 3.3
    django-jinja >= 2.10
    lxml >= 4.9
    nh3 >= 0.2


[tool:pytest]
DJANGO_SETTINGS_MODULE = testproject.settings
python_files = tests.py test_*.py **_test.py