[metadata]
name = baseapp_notifications
version = 0.3.2
description = BaseApp Notifications
long_description = file: README.md
url = https://github.com/silverlogic/baseapp-backend
author = The SilverLogic
author_email = dev@tsl.io
license = BSD-3-Clause  # Example license

[options]
include_package_data = true
packages = find:
python_requires = >=3.9
install_requires =
    baseapp-core[graphql] >= 0.2.11
    djmail >= 2.0
    django-notifications-hq >= 1.8
    firebase-admin >= 6.5.0
    django-push-notifications[WP,apns-async,FCM] @ git+https://github.com/jazzband/django-push-notifications.git@caf99175402dccde0418e174a64fc05b5aa4551b

[options.package_data]
baseapp_notifications =
    *.j2
    *.html
    *.png
