[metadata]
name = baseapp_organizations
version = 0.0.0
description = BaseApp Organizations
long_description = file: README.md
url = https://github.com/silverlogic/baseapp-backend
author = The SilverLogic
author_email = dev@tsl.io
license = BSD-3-Clause  # Example license

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django >= 3.2
    baseapp-core >= 0.2.6
    swapper == 1.3.0

[options.package_data]
baseapp_organizations =
    *.j2
    *.html
    *.png

[tool:pytest]
DJANGO_SETTINGS_MODULE = testproject.settings
python_files = tests.py test_*.py **_test.py
