[metadata]
name = baseapp_pages
version = 0.1.0
description = BaseApp Pages
long_description = file: README.md
url = https://github.com/silverlogic/baseapp-backend
author = The SilverLogic
author_email = dev@tsl.io
license = BSD-3-Clause  # Example license

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
install_requires =
    baseapp-core >= 0.2.9
    django-translated-fields >= 0.12
    django-quill-editor >= 0.1

[options.package_data]
baseapp_pages =
    *.j2
    *.html
    *.png
