[metadata]
name = baseapp_pages
version = 0.2.7
description = BaseApp Pages
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/silverlogic/baseapp-backend
author = The SilverLogic
author_email = dev@tsl.io
license = BSD-3-Clause  # Example license

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
install_requires =
    baseapp-core >= 0.3.7
    baseapp-comments >= 0.2.7
    django-translated-fields >= 0.12
    django-quill-editor >= 0.1

[options.package_data]
baseapp_pages =
    *.j2
    *.html
    *.png
