[metadata]
name = baseapp_payments
version = 0.3
description = A BaseApp app to handle payments.
long_description = file: README.md
url = https://bitbucket.org/silverlogic/baseapp-payments-django
author = The SilverLogic
author_email = dev@tsl.io
license = BSD-3-Clause  # Example license
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.2
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
install_requires =
    Django >= 2.2
    stripe == 2.60.0
    dj-stripe == 2.5.1
    swapper == 1.1.2.post1
    djangorestframework == 3.12.4
    djangorestframework-expander == 0.2.3
