[metadata]
name = baseapp_payments
version = 0.15
description = A BaseApp app to handle payments.
long_description = file: README.md
url = https://bitbucket.org/silverlogic/baseapp-payments-django
author = The SilverLogic
author_email = dev@tsl.io
license = BSD-3-Clause  # Example license
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = True
packages = find:
python_requires = >=3.8
install_requires =
    Django >= 3.2
    django-constance[database] >= 2.9.1
    stripe >= 2.70.0
    dj-stripe >= 2.8.1
    swapper == 1.3.0
    djangorestframework >= 3.14.0
    djangorestframework-expander == 0.2.3

    # TODO: add a require for baseapp_core after it's published

[options.package_data]
baseapp_payments =
    *.j2
baseapp_core =
    *.j2
    *.html
    *.png
