[metadata]
name = baseapp_profiles
version = 0.2.1
description = BaseApp Profiles
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/silverlogic/baseapp-backend
author = The SilverLogic
author_email = dev@tsl.io
license = BSD-3-Clause  # Example license

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
install_requires =
    baseapp-core >= 0.2.9
    baseapp-comments >= 0.1.3
    django-translated-fields >= 0.12
    django-quill-editor >= 0.1

[options.package_data]
baseapp_profiles =
    *.j2
    *.html
    *.png
