[metadata]
name = baseapp_profiles
version = 0.2.6
description = BaseApp Profiles
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/silverlogic/baseapp-backend
author = The SilverLogic
author_email = dev@tsl.io
license = BSD-3-Clause  # Example license

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
install_requires =
    baseapp-core >= 0.2.17
    baseapp-comments >= 0.1.6
    baseapp-follows >= 0.0.2
    baseapp-reactions >= 0.2.0

[options.package_data]
baseapp_profiles =
    *.j2
    *.html
    *.png
    *.jpg
