[metadata]
name = baseapp_profiles
version = 0.3.11
description = BaseApp Profiles
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/silverlogic/baseapp-backend
author = The SilverLogic
author_email = dev@tsl.io
license = BSD-3-Clause  # Example license

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
install_requires =
    baseapp-backend >= 0.0.15

[options.package_data]
baseapp_profiles =
    *.j2
    *.html
    *.png
    *.jpg
