[metadata]
name = baseapp-reactions
version = 0.1.2
description = BaseApp Reactions
long_description = file: README.md
url = https://github.com/silverlogic/baseapp-backend
author = The SilverLogic
author_email = dev@tsl.io
license = BSD-3-Clause  # Example license

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
install_requires =
    swapper == 1.3.0
    django-model-utils == 4.3.1
    graphene == 3.2.1
    graphene-django == 3.0.0

[options.package_data]
baseapp_core =
    *.j2
    *.html
    *.png
