[metadata]
name = baseapp_referrals
version = 0.1.0
description = BaseApp Referrals
long_description = file: README.md
url = https://github.com/silverlogic/baseapp-backend
author = The SilverLogic
author_email = dev@tsl.io
license = BSD-3-Clause  # Example license

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    django-model-utils == 4.3.1
    hashids == 1.3.1

[options.package_data]
baseapp_core =
    *.j2
    *.html
    *.png

[tool:pytest]
DJANGO_SETTINGS_MODULE = testproject.testapp.settings
python_files = tests.py test_*.py **_test.py